kubernetes/crawler/crawler_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: crawler
spec:
  selector:
    matchLabels:
      app: crawler
      tier: crawler
  replicas: 1
  template:
    metadata:
      labels:
        app: crawler
        tier: crawler
    spec:
      imagePullSecrets:
        - name: gcr-cred
      containers:
        - name: crawler
          image: gcr.io/distributed-email-pipeline/crawler:latest
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
